[package]
name = "actix-form-data"
description = "Multipart Form Data for Actix Web"
version = "0.4.0-beta.2"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/actix-form-data.git"
readme = "README.md"
keywords = ["actix", "form-data", "multipart", "async"]
edition = "2018"

[lib]
name = "form_data"

[dependencies]
actix-multipart = "0.1.0-beta.1"
actix-rt = "0.2.2"
actix-threadpool = "0.1.0"
actix-web = "1.0.0-beta.3"
bytes = "0.4.7"
failure = "0.1"
futures = "0.1.21"
http = "0.1.5"
log = "0.4.1"
mime = "0.3.5"

[dev-dependencies]
actix = "0.8.1"
env_logger = "0.6.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
